# tetris-m25

./: .gitignore  README.md  plan.md  prompt.md  pyproject.toml
.github/workflows/: build.yml
tests/: test_game.py
tetris/: __about__.py  __init__.py  game.py  logger.py  main.py  renderer.py  tetromino.py
